# QTail

./: .gitignore  CMakeLists.txt  DockOverlay.hpp  FilterProxyModels.hpp  FixDictionary.hpp  HighlightRule.hpp  HighlightRuleForm.hpp  HighlightRuleManager.hpp  LogFileModel.hpp  LogItemDelegate.hpp  LogListView.hpp  Readme.md  TailFileTitleBar.hpp  filemonitor.cpp  filemonitor.h  fixsortfilterproxymodel.cpp  fixsortfilterproxymodel.h  fixtable.cpp  fixtable.h  fixtablemodel.cpp  fixtablemodel.h  highlightedtextedit.cpp  highlightedtextedit.h  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  tailfilewidget.cpp  tailfilewidget.h  version.rc
assets/log-samples/: log-with-fix.txt
